examples/compiler_errors/wrong_argument_count.flx
// expect: compile_error
// expect-error: E056

fn add(a: Int, b: Int) -> Int {
    a + b
}

fn main() -> Unit {
    let ignored = add(1)
}
